@@ -143,11 +143,11 @@ int StreamPlayerParseHeader(StreamPlayerHeader *hdr,void *buf,unsigned len)
 
     case 19:   // Chunk Size
       hdr->chunk_len=hdr->chunk_len|((0xFF&ptr[i])<<24);
-      /*
+
       printf("CHUNK: %s  LEN: %u\n",
 	     (const char *)hdr->chunk_name.toUtf8(),
 	     hdr->chunk_len);
-      */
+
       hdr->left_to_skip=hdr->chunk_len;
       if(hdr->chunk_name.trimmed()=="fmt") {
 	hdr->istate=50;
@@ -244,7 +244,12 @@ int StreamPlayerParseHeader(StreamPlayerHeader *hdr,void *buf,unsigned len)
 
     case 65:   // FMT Chunk : Bits per Sample
       hdr->fmt_bits=hdr->fmt_bits|(0xFF&ptr[i])<<8;
-      hdr->istate++;
+      if(hdr->chunk_len>16) {
+	hdr->istate++;
+      }
+      else {
+	hdr->istate=12;
+      }
       break;
 
     case 66:   // Extension Size
